topページ作成（アコーディオンメニュー）

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,107 @@ header{
     flex: 0 0 19%;
     border-left: 1px solid #727272;
 }
+
+
+
+
+/* アコーディオンメニュー【Atlasトップページ】 */
+
+.accordion-container {
+  position: relative;
+  width: 100%;
+  border: 1px solid #0079c1;
+  border-top: none;
+  outline: 0;
+  cursor: pointer
+}
+
+.accordion-container .accordion-title {
+  display: block;
+  position: relative;
+  margin: 0;
+  padding: 0.625em 0.625em 0.625em 2em;
+  font-size: 1.25em;
+  font-weight: normal;
+  color: #fff;
+  background: #000;
+  cursor: pointer;
+}
+
+.accordion-container .accordion-title:hover,
+.accordion-container .accordion-title:active,
+.accordion-container .content-entry.open .accordion-title {
+  background-color: #00aaa7;
+  color: white;
+}
+
+.accordion-container .accordion-title:hover i:before,
+.accordion-container .accordion-title:hover i:active,
+.accordion-container .content-entry.open i {
+  color: white;
+}
+
+.accordion-title{
+  position: relative;
+}
+
+.accordion-title:after {
+  content: "";
+  position: absolute;
+  right: 25px;
+  top: 38%;
+  transition: all 0.2s ease-in-out;
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-top: solid 2px #fff;
+  border-right: solid 2px #fff;
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+.accordion-title.open:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 45%;
+}
+
+/* .accordion-content {
+  display: none;
+  padding-left: 2.3125em;
+
+} */
+
+.accordion-content {
+  display: none;
+  position: relative;
+  margin-bottom: 0;
+  padding: 0.625em 0.625em 0.625em 2em;
+  font-size: 1.25em;
+  font-weight: normal;
+  color: #fff;
+  background: #000;
+  cursor: pointer;
+
+}
+
+.accordion-content p{
+    margin-bottom: 20px;
+}
+
+.accordion-content p a{
+    color:#fff;
+}
+
+.accordion-content p a:hover{
+    color:#00aaa7;
+    font-size:22px;
+}
+
+/* CSS for CodePen */
+.accordion-container {
+  width: 300px;
+  margin: 1.875em auto;
+}
+
+/* ここまでがアコーディオンメニュー */
