投稿がデータベースのpostsテーブルに保存できたところまでいった。

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,3 +124,22 @@ header{
 }
 
 /* ここまでがアコーディオンメニュー */
+
+/* 投稿画面 */
+/* .content_wrapper{
+    width: 1000px;
+    min-height:500px;
+    text-align: center;
+}
+
+.content2{
+    display: inline-block;
+    text-align: left;
+    width:690px;
+    min-height:500px;
+    background-color: #ffffff;
+    border: 5px solid  #707aff;
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 10px;
+} */
