--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,9 +13,7 @@ header{
     line-height:70px;
 }
 
-header.logo{
-  padding: 0 20px;
-}
+
 
 header ul{
   padding:0 30px;
@@ -55,6 +53,16 @@ button{
   border: none;
 }
 
+
+#comment{
+  margin: 30px 10px 30px 30px;
+  font-size: 15px;
+}
+
+::placeholder{
+  /* color: #b0c4de; */
+  color: paleturquoise;
+}
 
 
 
@@ -174,6 +182,11 @@ button{
   background-color: #666;
 }
 /* ///////////////////////////////////////////////////////////////////////////////////// */
+
+/* 投稿の間隔 */
+.post-li{
+  margin: 20px  40px 20px;
+}
 /* 投稿編集ボタン */
 .post_btn1{
   width:30px;
