--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -6,5 +6,113 @@ html{
 
 body{
     height: 100%;
-    background: #186AC9;
+    /* 縦方向  背景を上から下にグラデーション */
+    /* background: -moz-linear-gradient(top, #FFC778, #FFF);
+    background: -webkit-linear-gradient(top, #FFC778, #FFF);
+
+    background: linear-gradient(to bottom, #FFC778, #FFF); */
+
+    background-image: linear-gradient(180deg, rgba(92, 157, 218, 1) 49%, rgba(252, 230, 87, 1) 97%);
+}
+
+
+header{
+    text-align: center;
+    margin-top: 280px;
+}
+
+header p{
+    font-size: 50px;
+    color:#fff;
+    margin-top: 10px;
+}
+
+
+
+/* AtlasSNSへようこそ */
+.hello{
+    text-align: center;
+    margin-top: 20px;
+    color:#fff;
+    font-size:30px;
+}
+
+/* ログインフォーム全体 */
+.login-form{
+    width:45%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 20px;
+    margin-top: 30px;
+    padding-top: 20px;
+    /* background-color: #6f5436; */
+    background: rgba(164,168,212,0.2);
+}
+
+/* ログインフォーム全体② */
+.box{
+    width:70%;
+    height:auto;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 15px;
+    /* background-color: #186AC9; */
+    padding-bottom: 40px;
+}
+
+/* ラベルと入力のセット */
+.set{
+    margin-top: 20px;
+}
+/* mail address passwordのlabel */
+.login{
+    color: #fff;
+    font-size: 30px;
+    font-weight: normal;
+    text-align: center;
+
+
+}
+
+/* 入力するところ */
+.input{
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    width:250px;
+    border-radius: 10px;
+    font-size: 20px;
+
+}
+/* ログインボタン */
+.login-btn{
+    background-color: #e73562;
+    font-size: 20px;
+    color:#fff;
+    padding: 20px 40px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all  0.3s ease;
+
+}
+
+.login-btn:hover{
+    background-color: #37beb0;
+}
+/* ユーザーの新規登録はこちら */
+.register{
+
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.register a{
+    font-size:20px;
+    text-align: center;
+    color: #fff;
+    transition: color  0.5s ease;
+}
+
+.register a:hover{
+    color: #d70035;
 }
