--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -12,6 +12,7 @@ body{
 
     background: linear-gradient(to bottom, #FFC778, #FFF); */
 
+    /* ログイン画面の背景グラデーション */
     background-image: linear-gradient(180deg, rgba(92, 157, 218, 1) 49%, rgba(252, 230, 87, 1) 97%);
 }
 
@@ -37,6 +38,25 @@ header p{
     font-size:30px;
 }
 
+/* addedの1,2段目 */
+.hello-added{
+    text-align: center;
+    margin-top: 40px;
+    color:aliceblue;
+    font-size: 28px;
+}
+
+/* 3,4段目 */
+.hello-added-2{
+    text-align: center;
+    margin-top: 20px;
+    color:aliceblue;
+    font-size: 28px;
+
+}
+
+
+
 /* ログインフォーム全体 */
 .login-form{
     width:45%;
@@ -47,6 +67,8 @@ header p{
     padding-top: 20px;
     /* background-color: #6f5436; */
     background: rgba(164,168,212,0.2);
+    /* ここで背景を透明にしている。 */
+
 }
 
 /* ログインフォーム全体② */
@@ -116,3 +138,26 @@ header p{
 .register a:hover{
     color: #d70035;
 }
+
+/* addedのログイン画面へボタン */
+.added-box{
+  text-align: center;
+  margin: 30px;
+  padding-bottom: 30px;
+
+}
+a.btn--red {
+  display: inline-block;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 20px 20px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: all  0.3s ease;
+  color: #fff;
+  background: #e73562;
+}
+a.btn--red:hover {
+background-color: #37beb0ba;
+}
+/* ここまでがaddedのボタン */
