--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -11,15 +11,16 @@ body{
     background: -webkit-linear-gradient(top, #FFC778, #FFF);
 
     background: linear-gradient(to bottom, #FFC778, #FFF); */
-
+    background-color: #D9AFD9;
     /* ログイン画面の背景グラデーション */
     background-image: linear-gradient(180deg, rgba(92, 157, 218, 1) 49%, rgba(252, 230, 87, 1) 97%);
+    /* background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%); */
 }
 
 
 header{
     text-align: center;
-    margin-top: 280px;
+    padding: 50px 0;
 }
 
 header p{
@@ -64,16 +65,18 @@ header p{
     margin: 0 auto;
     border-radius: 20px;
     margin-top: 30px;
+    margin-bottom: 20px;
     padding-top: 20px;
     /* background-color: #6f5436; */
-    background: rgba(164,168,212,0.2);
+    /* background: rgba(164,168,212,0.2); */
+    background-color: rgba(204,216,255,0.2);
     /* ここで背景を透明にしている。 */
 
 }
 
 /* ログインフォーム全体② */
 .box{
-    width:70%;
+    width:100%;
     height:auto;
     margin: 0 auto;
     text-align: center;
@@ -143,7 +146,8 @@ header p{
 .added-box{
   text-align: center;
   margin: 30px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 35px;
 
 }
 a.btn--red {
