--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,9 @@ header li a:hover{
   padding-left: 22px;
 }
 
+.side-right{
+  text-align: right;
+}
 .side-search_btn {
   text-align: center;
 }
