created_atでつぶやき表示した。つぶやきの新しい順に表示した

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,12 +79,13 @@ button{
 
 #comment{
   margin: 30px 10px 30px 30px;
+  /* padding-top: 40px; */
   font-size: 15px;
 }
 
 ::placeholder{
   /* color: #b0c4de; */
-  color: paleturquoise;
+  color: gray;
 }
 
 
