--- a/public/css/style.css
+++ b/public/css/style.css
@@ -347,3 +347,32 @@ ul{
 .form:focus{
   background-color: #bde9ba;
 }
+
+/* TOPページ//////////////////////////////////////////////////////////////////////////// */
+
+.post-block{
+  padding: 30px 30px 30px 80px;
+  width: 100%;
+  text-decoration: none;
+  border-bottom:1px solid #000;
+  display:flex;
+}
+
+.post-content{
+  width:100%;
+  padding:15px;
+}
+
+.post-content > div{
+  display:flex;
+  justify-content:space-between;
+}
+
+.post-name{
+  margin-bottom:10px;
+}
+
+.button-flex{
+  display: flex;
+  justify-content:end;
+}
