--- a/public/css/style.css
+++ b/public/css/style.css
@@ -438,6 +438,9 @@ height: auto;
   justify-content:space-between;
 }
 
+.login-name{
+  color: #fff;
+}
 .post-name{
   margin-bottom:10px;
 }
@@ -449,5 +452,27 @@ height: auto;
 
 /* フォローリスト */
 .follow-list{
-  
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-top:40px;
+}
+
+.list-title{
+  font-size: 35px;
+  font-weight: bold;
+  padding-right: 80px;
+  padding-left: 150px;
+}
+
+.follow_icon{
+  padding-right: 15px;
+}
+
+.gray-line{
+  background: #DCDCDC;
+  /* max-width: 100%; */
+  width: 100%;
+  height: 6px;
+  margin-top: 30px;
 }
