--- a/public/css/style.css
+++ b/public/css/style.css
@@ -478,3 +478,51 @@ height: auto;
   height: 8px;
   margin-top: 30px;
 }
+
+
+/* ////////////////////他ユーザーのprofileページ */
+
+.icon-flex{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  padding-left: 200px;
+}
+
+.name-flex{
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.name1{
+  margin-right: 80px;
+  font-size: 18px;
+}
+
+.user-name{
+  font-size: 18px;
+
+}
+
+.bio-flex{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.bio-title{
+ margin-right: 100px;
+ font-size: 18px;
+}
+
+.bio-post{
+ font-size: 20px;
+}
+
+.content-flex{
+ padding-left:20px;
+ margin-top: 20px;
+}
