--- a/public/css/style.css
+++ b/public/css/style.css
@@ -526,3 +526,26 @@ height: auto;
  padding-left:20px;
  margin-top: 20px;
 }
+
+.btn_box{
+  margin-left: auto;
+  /* margin-top: 20px; */
+
+}
+
+.btn_profile {
+  display: inline-block;
+  text-decoration: none;
+  padding:  10px 20px;
+  border-radius: 5px;
+  color: #fff;
+  /* margin: 20px; */
+  margin-bottom: 0;
+  margin-top: 48px;
+  margin-right: 20px;
+  transition: 0.3s;
+}
+
+.btn_profile:hover{
+  opacity: .5;
+}
