フォロー削除機能はできている。（画面遷移しない、エラーでる）

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -420,6 +420,9 @@ height: auto;
 
 /* TOPページ//////////////////////////////////////////////////////////////////////////// */
 
+
+.trash-box{
+}
 .post-block{
   padding: 30px 30px 30px 200px;
   width: 100%;
