--- a/public/css/style.css
+++ b/public/css/style.css
@@ -485,6 +485,7 @@ height: auto;
 
 /* ////////////////////他ユーザーのprofileページ */
 
+
 .icon-flex{
   display: flex;
   align-items: center;
@@ -551,4 +552,13 @@ height: auto;
 
 .btn_profile:hover{
   opacity: .5;
+}
+
+.post-block-profile{
+  padding: 30px 30px 30px 215px;
+  width: 100%;
+  text-decoration: none;
+  /* border-bottom:3px solid #DCDCDC; */
+  border-bottom:1px solid #888;
+  display:flex;
 }
