--- a/public/css/style.css
+++ b/public/css/style.css
@@ -575,7 +575,8 @@ height: auto;
 
 .form-group{
   display: flex;
-  margin-left: 330px;
+  /* margin-left: 330px; */
+  margin-left: 20%;
 }
 
 .profile_icon{
@@ -583,7 +584,7 @@ height: auto;
 }
 
 .profile-item{
-margin-top: 80px;
+margin-top: 75px;
 margin-left: 50px;
 }
 
@@ -607,4 +608,26 @@ margin-left: 50px;
 .items-input{
   display: inline-block;
   width: 70%;
+  background: #f2f2f2;
+  box-sizing: border-box;
+  padding: 0.35em;
+  border: 1px solid #999;
+}
+
+.btn-update{
+  text-align: center;
+}
+
+.btn-update_color{
+  background: red;
+  padding: 13px 120px;
+  font-size: 25px;
+  border-radius: 15px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.btn-update_color:hover{
+  opacity: .5;
+  background: #00aaa7;
 }
