--- a/public/css/style.css
+++ b/public/css/style.css
@@ -613,6 +613,42 @@ margin-left: 50px;
   padding: 0.35em;
   border: 1px solid #999;
 }
+/* /////ファイルを選択ボタン///// */
+
+#app {
+    display: inline-block;
+    width: 60%;
+    margin: auto;
+    padding: 40px 0;
+    line-height: 1.5;
+    border: 1px solid #999;
+    background-color: #f2f2f2;
+    text-align: center;
+}
+
+.file-label {
+    /* text-align: center; */
+    margin: 0 auto;
+    padding: 15px 40px;
+    color: #999;
+    background-color: #fff;
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.3s;
+}
+
+.file-label:hover{
+  opacity: .5;
+  color:#fff;
+  background: #0079c1;
+}
+
+
+input[type="file"] {
+    display: none;
+}
+
+/* /////////////// */
 
 .btn-update{
   text-align: center;
