--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 html{
 }
 body{
+  width: 100%;
 }
 /* header */
 header{
@@ -357,8 +358,8 @@ ul{
   align-items: center;
   width: 100%;
   height: auto;
-  padding-left: 70px;
-
+  margin-left: 70px;
+  margin-top: 25px;
 }
 
 .keyword-box{
@@ -369,13 +370,14 @@ ul{
 
 .keyword{
   font-size: 30px;
+  margin-left: -70px;
 }
 .search-form-001{
   padding-top: 30px;
   padding-left: 30px;
   display: flex;
   align-items: center;
-  justify-content:flex-start;
+  /* justify-content:flex-start; */
 }
 
 .form{
@@ -422,20 +424,19 @@ ul{
 
   display: flex;
   align-items: center;
-  justify-content: start;
-  /* padding-left: 320px; */
-  padding-left: 20%;
-  padding-top: 60px;
+  justify-content:flex-start;
+  margin-left: 22%;
+  margin-top: 25px;
 }
 
 .search-icon{
 display: inline-block;
-width: 20%;
+width:8%;
 height: auto;
 }
 
 .search-name{
-  width: 20%;
+  width: 19%;
   display: inline-block;
 }
 
