修正依頼、完了しました。

--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -59,7 +59,8 @@ header p{
 }
 
 .error-font{
-    margin-top: 10px;
+    margin-top: 5px;
+    font-size: 20px;
     text-align: center;
     color: red;
 }
@@ -89,13 +90,15 @@ header p{
     text-align: center;
     border-radius: 15px;
     /* background-color: #186AC9; */
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 
 /* ラベルと入力のセット */
 .set{
-    margin-top: 20px;
+    margin-top: 10px;
 }
+
+
 /* mail address passwordのlabel */
 .login{
     color: #fff;
@@ -110,32 +113,31 @@ header p{
 .input{
     display: inline-block;
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     width:250px;
     border-radius: 10px;
     font-size: 20px;
 
 }
 
-#password{
-    display: inline-block;
-    margin-top: 10px;
-    margin-bottom: 30px;
-    width:250px;
-    border-radius: 10px;
-    font-size: 20px;
-}
 
 .password{
     display: inline-block;
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     width:250px;
     border-radius: 10px;
     font-size: 20px;
 }
+
+.password2{
+    margin-bottom: ;
+}
+
 /* ログインボタン */
 .login-btn{
+    margin-top: 30px;
+    display: inline-block;
     background-color: #e73562;
     font-size: 20px;
     color:#fff;
