--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,22 @@ header li a:hover{
   justify-content: center;
 }
 
+.error-message{
+  color:red;
+  font-size: 20px;
+  text-align: center;
+  margin: 30px auto;
+}
+
+
+
+.error-message-profile{
+  margin-top: 20px;
+  color:red;
+  font-size: 20px;
+  text-align: center;
+}
+
 .header-icon{
   margin-top: 30px;
 }
